--- a/paper.tex
+++ b/paper.tex
@@ -106,7 +106,7 @@
 \newcommand{\UnipotentRadicalForWssRecursion}[2]{\mathcal{Y}_{c,k}}
 \newcommand{\UnipotentRadical}{N}
 \newcommand{\ParabolicSubgroup}{P}
-\newcommand{\GroupExtension}[1]{{#1}^{\mathrm{ext}}}
+\newcommand{\GroupExtension}[1]{\widetilde{#1}}
 
 % Finite field macros
 \newcommand{\FieldNorm}[2]{\mathrm{N}_{#1:#2}}
@@ -304,7 +304,7 @@ Let $\hermitianSpace$ be a vector space of dimension $n$ over $\quadraticExtensi
 	\item ($\epsilon$-symmetric) For every $x,y \in \hermitianSpace$, $$\innerproduct{x}{y} = \epsilon \involution{\innerproduct{y}{x}}.$$
 	\item (non-degenerate) For every $0 \ne x \in \hermitianSpace$ there exists $y \in \hermitianSpace$ such that $$\innerproduct{x}{y} \ne 0.$$
 \end{enumerate}
-Let $\IsometryGroup \left(\hermitianSpace\right)$ be the isometry group of $\hermitianSpace$, consisting of all the elements of $\GL\left(\hermitianSpace\right)$ that satisfy $\innerproduct{gx}{gy} = \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. We denote by $G$ the identity component of $\IsometryGroup\left(\hermitianSpace\right)$. Let $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ be the similitude group version of $\IsometryGroup\left(\hermitianSpace\right)$, consisting of the elements $g \in \GL\left(\hermitianSpace\right)$ with the property that there exists a constant $\similitudeCharacter\left(g\right) \in \multiplicativegroup{\quadraticExtension}$ such that for every $\innerproduct{gx}{gy} = \similitudeCharacter\left(g\right) \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. Let $\GroupExtension{G}$ be the identity component of $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$. If $\quadraticExtension = \finiteField$ and $\dim_{\finiteField} \hermitianSpace = 2n$ is even, then $\GroupExtension{G}$ consists of all element in $G$ satisfying $\similitudeCharacter\left(g\right) = \left(\det g\right)^n$. Let $\lieAlgebra$ be the Lie algebra of $G$, consisting of all elements $A \in \EndomorphismRing\left(\hermitianSpace\right)$ satisfying $\innerproduct{Ax}{y} + \involution{\innerproduct{x}{AY}} = 0$ for every $x, y \in \hermitianSpace$.
+Let $\IsometryGroup \left(\hermitianSpace\right)$ be the isometry group of $\hermitianSpace$, consisting of all the elements of $\GL\left(\hermitianSpace\right)$ that satisfy $\innerproduct{gx}{gy} = \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. We denote by $G$ the identity component of $\IsometryGroup\left(\hermitianSpace\right)$. Let $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ be the similitude group version of $\IsometryGroup\left(\hermitianSpace\right)$, consisting of the elements $g \in \GL\left(\hermitianSpace\right)$ with the property that there exists a constant $\similitudeCharacter\left(g\right) \in \multiplicativegroup{\quadraticExtension}$ such that for every $\innerproduct{gx}{gy} = \similitudeCharacter\left(g\right) \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. Let $\GroupExtension{G}$ be the identity component of $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$. If $\quadraticExtension = \finiteField$ and $\dim_{\finiteField} \hermitianSpace = 2n$ is even, then $\GroupExtension{G}$ consists of all elements in $\GroupExtension{\IsometryGroup\left(G\right)}$ satisfying $\similitudeCharacter\left(g\right) = \left(\det g\right)^n$. Let $\lieAlgebra$ be the Lie algebra of $G$, consisting of all elements $A \in \EndomorphismRing\left(\hermitianSpace\right)$ satisfying $\innerproduct{Ax}{y} + \involution{\innerproduct{x}{AY}} = 0$ for every $x, y \in \hermitianSpace$.
 
 We will assume that $\dim_{\finiteField} \hermitianSpace$ is even. This is automatic for all case, expect for when $\quadraticExtension = \finiteField$ and $\epsilon = 1$, in which case we will only consider even special orthogonal groups.
 
