--- a/paper.tex
+++ b/paper.tex
@@ -306,7 +306,7 @@ Let $\hermitianSpace$ be a vector space of dimension $n$ over $\quadraticExtensi
 \end{enumerate}
 Let $\IsometryGroup \left(\hermitianSpace\right)$ be the isometry group of $\hermitianSpace$, consisting of all the elements of $\GL\left(\hermitianSpace\right)$ that satisfy $\innerproduct{gx}{gy} = \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. We denote by $G$ the identity component of $\IsometryGroup\left(\hermitianSpace\right)$. Let $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ be the similitude group version of $\IsometryGroup\left(\hermitianSpace\right)$, consisting of the elements $g \in \GL\left(\hermitianSpace\right)$ with the property that there exists a constant $\similitudeCharacter\left(g\right) \in \multiplicativegroup{\quadraticExtension}$ such that for every $\innerproduct{gx}{gy} = \similitudeCharacter\left(g\right) \innerproduct{x}{y}$ for every $x,y \in \hermitianSpace$. Let $\GroupExtension{G}$ be the identity component of $\GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$. If $\quadraticExtension = \finiteField$ and $\dim_{\finiteField} \hermitianSpace = 2n$ is even, then $\GroupExtension{G}$ consists of all elements in $\GroupExtension{\IsometryGroup\left(G\right)}$ satisfying $\similitudeCharacter\left(g\right) = \left(\det g\right)^n$. Let $\lieAlgebra$ be the Lie algebra of $G$, consisting of all elements $A \in \EndomorphismRing\left(\hermitianSpace\right)$ satisfying $\innerproduct{Ax}{y} + \involution{\innerproduct{x}{AY}} = 0$ for every $x, y \in \hermitianSpace$.
 
-We will assume that $\dim_{\finiteField} \hermitianSpace$ is even. This is automatic for all case, expect for when $\quadraticExtension = \finiteField$ and $\epsilon = 1$, in which case we will only consider even special orthogonal groups.
+We will assume that $\dim_{\finiteField} \hermitianSpace$ is even. This is automatic in all cases, expect for when $\quadraticExtension = \finiteField$ and $\epsilon = 1$, in which case we will only consider even special orthogonal groups.
 
 Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a character. As before, the assignment $\Phi_{\chi} \colon \GL\left(\hermitianSpace\right) \to \cComplex$ given by $$\Phi_{\chi}\left(g\right) = \begin{dcases}
 \chi\left(\det\left(g - \idmap_{\hermitianSpace}\right)\right) & \text{if }\det\left(g - \idmap_{\hermitianSpace}\right) \ne 0\\
